# scion

./: Makefile
doc/: ColibriDesign.rst  EPIC.md  index.rst
doc/protocols/: casa.rst  scion-header.rst
go/cs/beacon/beacondbtest/: beacondbtest.go
go/cs/beaconing/: extender.go
go/cs/reservation/reservationdbtest/: reservationdbtest.go
go/cs/reservation/segment/: request.go
go/cs/reservation/segment/admission/: BUILD.bazel  admitter.go
go/cs/reservation/segment/admission/impl/: BUILD.bazel  stateless.go  stateless_test.go
go/cs/reservation/segment/admission/stateful/: BUILD.bazel  stateful.go  stateful_test.go  stateless.go  stateless_test.go
go/cs/reservation/segment/admission/stateless/: BUILD.bazel  stateless.go  stateless_test.go
go/cs/reservation/sqlite/: db.go  schema.go
go/cs/reservationstorage/backend/: db.go
go/cs/reservationstorage/backend/mock_backend/: mock.go
go/cs/reservationstore/: BUILD.bazel  db_manip_test.go  store.go  store_test.go
go/lib/addr/: host.go
go/lib/colibri/: BUILD.bazel  colibri.go  colibri_test.go  export_test.go
go/lib/colibri/reservation/: types.go
go/lib/ctrl/seg/: BUILD.bazel  as.go  extensions.go  extensions_test.go  hop.go  seg.go
go/lib/ctrl/seg/extensions/digest/: BUILD.bazel  digest.go  digest_test.go
go/lib/ctrl/seg/unsigned_extensions/: BUILD.bazel  unsigned_extensions.go  unsigned_extensions_test.go
go/lib/ctrl/seg/unsigned_extensions/epic_detached/: BUILD.bazel  epic_detached.go
go/lib/infra/messenger/: addr_test.go
go/lib/libepic/: BUILD.bazel  libepic.go  libepic_test.go
go/lib/pathdb/pathdbtest/: pathdbtest.go
go/lib/scrypto/: mac.go
go/lib/slayers/: BUILD.bazel  scion.go
go/lib/slayers/path/: mac.go
go/lib/slayers/path/colibri/: BUILD.bazel  colibri.go  colibri_minimal.go  colibri_test.go  hopfield.go  hopfield_test.go  infofield.go  infofield_test.go
go/lib/slayers/path/epic/: BUILD.bazel  epic.go  epic_test.go
go/lib/snet/: BUILD.bazel  packet.go  path.go
go/lib/snet/path/: path.go
go/lib/spath/: BUILD.bazel  path.go
go/lib/svc/: resolver.go
go/pkg/cs/: messaging.go
go/pkg/proto/control_plane/: seg.pb.go  seg_extensions.pb.go
go/pkg/proto/control_plane/experimental/: seg_detached_extensions.pb.go
go/pkg/proto/control_plane/mock_control_plane/: mock.go
go/pkg/router/: BUILD.bazel  colibri_processing.go  connector.go  dataplane.go  dataplane_test.go  export_test.go
go/pkg/router/control/: conf.go
go/pkg/router/te/: BUILD.bazel  colibriprio.go  others.go  roundrobin.go  strict.go  te.go
go/posix-router/: main.go
proto/control_plane/experimental/v1/: seg_detached_extensions.proto
proto/control_plane/v1/: BUILD.bazel  seg.proto  seg_extensions.proto
tools/wireshark/: scion.lua
