load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "db_manip_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//go/cs/reservation:go_default_library",
        "//go/cs/reservation/e2e:go_default_library",
        "//go/cs/reservation/segment:go_default_library",
        "//go/cs/reservation/segment/admission:go_default_library",
        "//go/cs/reservation/segment/admission/stateful:go_default_library",
        "//go/cs/reservation/segment/admission/stateless:go_default_library",
        "//go/cs/reservation/segmenttest:go_default_library",
        "//go/cs/reservation/sqlite:go_default_library",
        "//go/cs/reservation/test:go_default_library",
        "//go/cs/reservationstorage:go_default_library",
        "//go/cs/reservationstorage/backend:go_default_library",
        "//go/lib/addr:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/util:go_default_library",
        "//go/lib/xtest:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["store.go"],
    importpath = "github.com/scionproto/scion/go/cs/reservationstore",
    visibility = ["//visibility:public"],
    deps = [
        "//go/cs/reservation:go_default_library",
        "//go/cs/reservation/e2e:go_default_library",
        "//go/cs/reservation/segment:go_default_library",
        "//go/cs/reservation/segment/admission:go_default_library",
        "//go/cs/reservationstorage:go_default_library",
        "//go/cs/reservationstorage/backend:go_default_library",
        "//go/lib/colibri/reservation:go_default_library",
        "//go/lib/serrors:go_default_library",
    ],
)
