load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["libepic.go"],
    importpath = "github.com/scionproto/scion/go/lib/libepic",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path/epic:go_default_library",
        "//go/lib/slayers/path/scion:go_default_library",
        "@com_github_dchest_cmac//:go_default_library",
        "@org_golang_x_crypto//curve25519:go_default_library",
        "@org_golang_x_crypto//ed25519:go_default_library",
        "@org_golang_x_crypto//nacl/box:go_default_library",
    ],
)

