load("//lint:go.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["te.go"],
    importpath = "github.com/scionproto/scion/go/pkg/router/te",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/serrors:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
    ],
)
