load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["unsigned_extensions.go"],
    importpath = "github.com/scionproto/scion/go/lib/ctrl/seg/unsigned_extensions",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/ctrl/seg/unsigned_extensions/epic_detached:go_default_library",
        "//go/pkg/proto/control_plane:go_default_library",
    ],
)
