load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "colibri.go",
        "infofield.go",
        "hopfield.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/slayers/path/colibri",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/serrors:go_default_library",
        "//go/lib/slayers/path:go_default_library",
        "//go/lib/slayers/path/scion:go_default_library",
    ],
)
