load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["epic_detached.go"],
    importpath = "github.com/scionproto/scion/go/lib/ctrl/seg/unsigned_extensions/epic_detached",
    visibility = ["//visibility:public"],
    deps = ["//go/pkg/proto/control_plane/experimental:go_default_library"],
)
